made a new branch from master, moved files from front end to marketing

--- a/css/index.css
+++ b/css/index.css
@@ -188,6 +188,7 @@ body footer nav {
 @media (max-width: 767.98px) {
   body footer nav {
     width: 100%;
+    justify-content: space-around;
   }
 }
 body footer nav a {
