--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -61,6 +61,7 @@ body{
 
             @media @mobile{
                 width: 100%;
+                justify-content: space-around;
             }
             a{
                 text-decoration: none;
