--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -43,9 +43,7 @@ body{
                 border-radius:10px;
                 text-decoration: none;
 
-                &:hover{
-                    opacity: .5;
-                }
+                .lightenOnHover(0.2);
             }
         }
 
@@ -67,9 +65,7 @@ body{
                 text-decoration: none;
                 color: black;
 
-                &:hover{
-                    opacity: .5;
-                }
+                .lightenOnHover(0.2);
 
             }
         }
