--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -18,11 +18,11 @@ body{
             .flexDisplay(column, space-evenly, center);
             background: white;
             border-radius: 10px;
-            width: 484px;
-            height: 40vh;
+            width: 48.4ch;
+            height: 55vh;
 
             @media @mobile{
-                width: 100%;
+                width: 70%;
             }
 
             @media (max-height:400px){
@@ -32,7 +32,7 @@ body{
             h1{
                 font-size: 2rem;
                 @media @mobile{
-                    font-size: 1.75rem;
+                    font-size: 1rem;
                 }
             }
 
@@ -54,6 +54,9 @@ body{
                 text-decoration: none;
 
                 .lightenOnHover(0.2);
+            }
+            p{
+                border-top: 1px solid grey;
             }
         }
 
