--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -57,6 +57,7 @@ body{
             }
             p{
                 border-top: 1px solid grey;
+                padding-left: 3%;
             }
         }
 
