--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,7 @@ body .container .login a:hover {
 body .container .login p {
   border-top: 1px solid grey;
   padding-left: 3%;
+  padding-top: 2%;
 }
 body footer {
   display: flex;
