--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -58,6 +58,7 @@ body{
             p{
                 border-top: 1px solid grey;
                 padding-left: 3%;
+                padding-top: 2%
             }
         }
 
