--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -1,6 +1,6 @@
 body{
     background-image: url("../images/postits.jpg");
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -75,6 +75,7 @@ body{
             @media @mobile{
                 width: 100%;
                 justify-content: space-around;
+                padding-top: 2%;
             }
             a{
                 text-decoration: none;
