--- a/css/index.css
+++ b/css/index.css
@@ -118,7 +118,7 @@ footer a {
 }
 body {
   background-image: url("../images/postits.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -207,6 +207,7 @@ body footer nav {
   body footer nav {
     width: 100%;
     justify-content: space-around;
+    padding-top: 2%;
   }
 }
 body footer nav a {
@@ -215,4 +216,114 @@ body footer nav a {
 }
 body footer nav a:hover {
   opacity: 0.2;
+}
+body h1 {
+  font-size: 3rem;
+  text-align: center;
+}
+@media (max-width: 767.98px) {
+  body h1 {
+    font-size: 1.5rem;
+  }
+}
+body .aboutContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 95vh;
+}
+@media (max-width: 767.98px) {
+  body .aboutContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+    height: 200vh;
+  }
+}
+body .aboutContainer .info {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 50%;
+  height: 30vh;
+}
+@media (max-width: 767.98px) {
+  body .aboutContainer .info {
+    width: 100%;
+  }
+}
+body .aboutContainer .info .imgBox {
+  height: 30vh;
+  width: 30%;
+}
+body .aboutContainer .info .imgBox img {
+  width: 100%;
+  height: 25vh;
+  border-radius: 10px;
+}
+body .aboutContainer .info .imgBox h3 {
+  text-align: center;
+  font-size: 1.3rem;
+}
+@media (max-width: 767.98px) {
+  body .aboutContainer .info .imgBox h3 {
+    font-size: 0.75rem;
+  }
+}
+body .aboutContainer .info .infoBox {
+  height: 30vh;
+  width: 70%;
+  border: 2px solid black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+@media (max-width: 767.98px) {
+  body .aboutContainer .info .infoBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+}
+@media (max-height: 400px) {
+  body .aboutContainer .info .infoBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+body .aboutContainer .info .infoBox p {
+  height: 2vh;
+  width: 80%;
+  color: white;
+}
+@media (max-width: 767.98px) {
+  body .aboutContainer .info .infoBox p {
+    padding-top: 7%;
+  }
+}
+@media (max-height: 400px) {
+  body .aboutContainer .info .infoBox p {
+    padding-top: 2%;
+  }
+}
+@media (max-width: 918px) {
+  body .aboutContainer .info .infoBox p {
+    font-size: 0.75rem;
+  }
+}
+@media (max-width: 767.98px) {
+  body .aboutContainer .blank {
+    display: none;
+  }
 }
