--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -36,14 +36,9 @@ body{
                 }
             }
 
-            .loginButton{
+            .homeButton{
                 color: white;
                 background: @login-color;
-            }
-
-            .signup{
-                color:black;
-                background: @signup-color;
             }
 
             a{
@@ -52,6 +47,8 @@ body{
                 height: 7.5vh;
                 border-radius:10px;
                 text-decoration: none;
+                color: white;
+                background: @login-color;
 
                 .lightenOnHover(0.2);
             }
